remove global letter spacing causing overflow issues

--- a/assets/scss/fonts/_fonts.scss
+++ b/assets/scss/fonts/_fonts.scss
@@ -20,5 +20,4 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     font-family: "Helvetica Neue Light", sans-serif !important;
-    letter-spacing: 1px;
 }
